fix: banner alignment on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -454,7 +454,7 @@ body {
 
 .banner-container{
   position: relative;
-  top: 65%;
+  top: 75%;
   width: 100%;
   background:rgb(237, 237, 237);
   height: auto;
